# vps-monitor

./: .editorconfig  .env.example  .gitignore  DOCKER_SETUP.md  Makefile  README.md  STRUCTURE.md  docker-compose.yml
.github/workflows/: backend-deploy.yml  deploy.yml  shared-services-deploy.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  setup.cfg
backend/apps/: urls.py
backend/apps/providers/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
backend/apps/providers/migrations/: 0001_initial.py
backend/apps/providers/services/: base.py  contabo.py  digitalocean.py  encryption.py  factory.py
backend/apps/shared/: storage_backends.py
backend/apps/vps/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/vps/migrations/: 0001_initial.py
backend/apps/vps/services/: aggregator.py  price_loader.py
backend/conf/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
deployment/: Dockerfile  deploy.sh  docker-compose.yml  nginx.conf
deployment/backend/: docker-compose.yml
deployment/backend/grafana/dashboards/: exporters-dashboards.json
deployment/backend/prometheus/: prometheus.yml
docs/: SETUP.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/billing/: CostChart.tsx  ProviderCostCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/providers/: ProviderForm.tsx  ProviderList.tsx
frontend/src/components/ui/: Toast.tsx  ToastContainer.tsx
frontend/src/components/vps/: PriceModal.tsx  VPSDashboard.tsx  VPSFilters.tsx  VPSStatusBadge.tsx  VPSTable.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/api/: auth.ts  client.ts  instance-prices.ts  providers.ts  vps.ts
frontend/src/lib/hooks/: useInstanceCustomPrice.ts  usePageTitle.ts  useProviders.ts  useToast.ts  useVPS.ts
frontend/src/lib/stores/: authStore.ts  toastStore.ts
frontend/src/lib/utils/: toast.ts
frontend/src/pages/: Billing.tsx  Dashboard.tsx  Login.tsx  Providers.tsx
frontend/src/types/: auth.ts  provider.ts  vps.ts
