[project]
name = "vps-monitor"
version = "1.0.0"
description = "A modern, full-stack VPS monitoring dashboard for managing cloud infrastructure across multiple providers (Contabo and DigitalOcean) with REST API, Redis caching, and encrypted credential storage."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "VPS Monitor Contributors" }
]
license = { text = "MIT" }
keywords = ["vps", "monitoring", "dashboard", "contabo", "digitalocean", "django", "react"]
dependencies = [
    "cryptography>=41.0.0",
    "django>=5.2.7",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-jazzmin>=3.0.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "drf-standardized-errors>=0.15.0",
    "gunicorn>=23.0.0",
    "httpx>=0.24.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=7.0.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "django-debug-toolbar>=5.2.0",
    "flake8>=7.3.0",
]
